# AppManager

./: .gitignore  Cargo.toml  README.md  services.example.yaml
src/: api.rs  main.rs  manager.rs  service.rs
web/: index.html
