[package]
name = "appmanager"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_yaml = "0.9.34-deprecated"
anyhow = "1.0.100"
sysinfo = "0.37.2"
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Console"] }
clap = { version = "4.5.53", features = ["derive"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
